# tokenledger

./: .gitignore  .golangci.yml  ADR.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  FINAL_STEPS.md  FUNCTIONAL_REQUIREMENTS.md  MODULARIZATION_STATUS.md  PLAN.md  PRD.md  README.md  REFACTORING_SUMMARY.md  SPEC.md  TEST_SUMMARY.md  Taskfile.yml  chat.md  models.csv  models_normalized.csv  models_schema_seed.sql  pricing.example.json
.github/workflows/: bench-perf-gate.yml  ci.yml  codeql.yml  docs.yml  ledger-diff-check.yml  pricing-governance-check.yml  secret-scanning.yml
.serena/: project.yml
.validation_logs_20260220/: mixed-unpriced.jsonl
artifacts/: cache-metrics.sample.jsonl
benchmarks/: perf-gates.json
benchmarks/fixtures/: bench-golden.json
benchmarks/results/: baseline-summary.json  bench-20260220-082050.json  bench-20260220-082051.json  bench-20260220-152824.json  bench-20260220-152945.json  bench-20260220-155830.json  bench-20260220-161722.json  bench-20260220-161749.json  bench-20260220-161939.json  bench-20260220-162421.json  bench-20260220-162901.json  bench-20260221-012644.json  bench-20260221-102728.json  bench-20260221-110235.json  coverage-latest.json  coverage-patch-events.json  coverage-patch.json  coverage-unpriced.jsonl  ingest-state.json  ingest-summary.json  latest-summary.json  mixed-unpriced.apply.jsonl  orch-test-summary.json  orch-test-ui.json  orchestrate-aggregate-cache.validate.json  orchestrate-cache-summary.first.json  (+17 more)
config/: phenotype.toml
configs/: benchmarks.example.yaml
crates/pareto-rs/: Cargo.toml
crates/pareto-rs/src/: cost.rs  format.rs  lib.rs  models.rs  pricing.rs  utils.rs
crates/tokenledger/: Cargo.toml
crates/tokenledger/src/: bench.rs  cli.rs  cost.rs  format.rs  lib.rs  main.rs  models.rs  orchestrate.rs
crates/tokenledger/src/benchmarks/: artificial_analysis.rs  cli.rs  mod.rs
crates/tokenledger/src/ingest/: validation.rs
crates/tokenledger/src/routing/: mappings.rs
docs/: CHANGELOG.md  PRD.md  SPEC.md  WORKLOG.md  index.md  package.json
examples/: events.jsonl  ingested.sample.jsonl
ledger/: cliproxyapi_runtime_metrics_snapshot.csv  unified_model_provider_ledger.csv  unified_model_provider_ledger.schema.sql  unified_model_provider_ledger.seed.sql  unified_model_provider_pareto.csv  unified_model_provider_pareto.view.sql
scripts/: build_model_seed.py  build_unified_ledger.py  perf_gate.sh  refresh_ledger.py  validate_provider_ledger_module.sh
src/: analytics.rs  cache.rs  cli.rs  cost.rs  format.rs  ingest.rs  lib.rs  main.rs  models.rs  orchestrate.rs  phenotype_init.rs  pricing.rs  utils.rs
tests/: integration_test.rs
(+71 files in other folders)
