[workspace]
resolver = "2"
members = ["crates/pareto-rs", "crates/tokenledger"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KooshaPari <kooshapari@kooshapari.com>"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
serde_yaml = "0.9"
tempfile = "3.14"
