[package]
name = "ParetoRs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pareto-optimal cost engine for AI coding agents"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
